[tool.poetry]
name = "integratune"
version = "0.1.0"
description = ""
authors = ["Mikhael Manurung <mikhael.manurung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scvi-tools = "^0.16.4"
scib = "^1.0.2"
ray = {extras = ["tune"], version = "^1.13.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.1.1"
pytest-mypy = "^0.9.1"
pytest-mock = "^3.7.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
black = "^22.3.0"
jupyterlab = "^3.4.3"
nbdev = "^1.2.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
